--- a/index.html
+++ b/index.html
@@ -3,100 +3,166 @@
 
 <head>
     <title>Tech Karo Feedback form</title>
-    <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: rgb(240, 235, 248);
-            width: auto;
-            margin-top: 200px;
-        }
-
-        .content {
-            background-color: white;
-            border-top: 6px solid rgb(174, 121, 255);
-            max-width: 600px;
-            margin: auto;
-            padding: 50px;
-            box-shadow: 3px 3px rgb(214, 212, 212)
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <div class="topsec"></div>
     <section class="content">
         <div>
             <h1>Tech Karo Feedback Form</h1>
             <p>This is just a dummy form. Don't fill it. Just PNG Slice it!</p>
-            <p style="color:red">
+            <p class="validation">
                 <small>Required<sup>*</sup></small></p>
         </div>
-        <!-- Style = "border:none" ye input m kren -->
         <div>
-            <h4>Full Name<sup style="color:red">*</sup></h4>
-            <input Style="border:none" placeholder="Your answer" title="Please fill out this field.">
+            <h4>Full Name<sup class="validation">*</sup></h4>
+            <input placeholder="Your answer" title="Please fill out this field." required>
         </div>
         <div>
-            <h4>Phone Number<sup style="color:red">*</sup></h4>
-            <input Style="border:none" placeholder="Your answer" title="Please fil out this field.">
+            <h4>Phone Number<sup class="validation">*</sup></h4>
+            <input placeholder="Your answer" title="Please fil out this field." required>
         </div>
         <div>
             <h4>Email</h4>
-            <input Style="border:none" placeholder="Your answer">
+            <input placeholder="Your answer">
         </div>
-        <div>
-            <h4>Gender</h4>
-            <input type="radio">Male<br>
-            <input type="radio">Female
+        <h4>Gender</h4>
+        <div class="gender">
+            <input id="male" name="gender" type="radio">
+            <label for="male">Male</label>
+        </div>
+        <div class="gender">
+            <input id="female" name="gender" type="radio">
+            <label for="female">Female</label>
         </div>
         <div>
             <h4>Age</h4>
-            <input Style="border:none" placeholder="Your answer">
+            <input placeholder="Your answer">
         </div>
         <div>
             <h4>Date of Birth</h4>
-            <input Style="border:none" type="date">
+            <input type="date">
         </div>
-        <div>
-            <h4>Choose all life skills you would like to learn in TK 2019
-            </h4>
-            <input type="checkbox">Problem Solving<br>
-            <input type="checkbox">Team Work<br>
-            <input type="checkbox">Communication Skills<br>
-            <input type="checkbox">Presentational <br>
-            <input type="checkbox">CV / Resume Writing<br>
-            <input type="checkbox">Self Defence<br>
-            <input type="checkbox">Work Ethics<br>
+        <h4>Choose all life skills you would like to learn in TK 2019
+        </h4>
+        <div class="lifeskills-btn">
+            <input type="checkbox" id="prob-sol">
+            <label for="prob-sol">Problem Solving</label>
+        </div>
+        <div class="lifeskills-btn">
+            <input type="checkbox" id="tw">
+            <label for="tw">Team Work</label>
+        </div>
+        <div class="lifeskills-btn">
+            <input type="checkbox" id="cs">
+            <label for="cs">Communication Skills</label>
+        </div>
+        <div class="lifeskills-btn">
+            <input type="checkbox" id="ps">
+            <label for="ps">Presentation Skills</label>
+        </div>
+        <div class="lifeskills-btn">
+            <input type="checkbox" id="cv">
+            <label for="cv">CV / Resume Writing</label>
+        </div>
+        <div class="lifeskills-btn">
+            <input type="checkbox" id="sd">
+            <label for="sd">Self Defence</label>
+        </div>
+        <div class="lifeskills-btn">
+            <input type="checkbox" id="we">
+            <label for="we">Work Ethics</label>
         </div>
         <div>
             <h4>Rate the orientation class of TK 2019</h4>
-            <p>1 2 3 4 5 6 7 8 9 10</p>
-            <input type="radio">
-            <input type="radio">
-            <input type="radio">
-            <input type="radio">
-            <input type="radio">
-        </div>
-        <div>
-            <h4>Comments</h4>
-            <input Style="border:none" placeholder="Your answer">
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-        </div>
-        <div>
-            <input type="submit" value="submit">
-            <p><small>Never submit passwords through Google Forms.</small></p>
-        </div>
+            <div class="orientation">
+                <label for="1">
+                    <div>1</div>
+                    <input id="1" name="number" type="radio">
+                </label>
+            </div>
+            <div class="orientation">
+                <label for="2">
+                    <div>2</div>
+                    <input id="2" name="number" type="radio">
+                </label>
+            </div>
+            <div class="orientation">
+                <label for="3">
+                    <div>3</div>
+                    <input id="3" name="number" type="radio">
+                </label>
+            </div>
+
+            <div class="orientation">
+                <label for="4">
+                    <div>4</div>
+                    <input id="4" name="number" type="radio">
+                </label>
+            </div>
+
+            <div class="orientation">
+                <label for="5">
+                    <div>5</div>
+                    <input id="5" name="number" type="radio">
+                </label>
+            </div>
+
+            <div class="orientation">
+                <label for="6">
+                    <div>6</div>
+                    <input id="6" name="number" type="radio">
+                </label>
+            </div>
+
+            <div class="orientation">
+                <label for="7">
+                    <div>7</div>
+                    <input id="7" name="number" type="radio">
+                </label>
+            </div>
+
+            <div class="orientation">
+                <label for="8">
+                    <div>8</div>
+                    <input id="8" name="number" type="radio">
+                </label>
+            </div>
+
+            <div class="orientation">
+                <label for="9">
+                    <div>9</div>
+                    <input id="9" name="number" type="radio">
+                    <div></div>
+                </label>
+            </div>
+
+            <div class="orientation">
+                <label for="10">
+                    <div>10</div>
+                    <input id="10" name="number" type="radio">
+                </label>
+            </div>
+
+            <div>
+                <h4>Comments</h4>
+                <input placeholder="Your answer">
+            </div>
+            <div>
+                <input type="submit" value="SUBMIT" class="submit">
+                <p class="caution"><small>Never submit passwords through Google Forms.</small></p>
+            </div>
     </section>
     <footer>
-        <center>
-            <p style="color:black">
-                <small>This content is neither created nor endorsed by Google.<a
-                        href="https://docs.google.com/forms/d/e/1FAIpQLSdmJ4tz9zUZ2b5U5htvHH1kmhNlVO-oe6hS90T1G3zqgTDTqw/reportabuse?source=https://docs.google.com/forms/d/e/1FAIpQLSdmJ4tz9zUZ2b5U5htvHH1kmhNlVO-oe6hS90T1G3zqgTDTqw/viewform">Report
-                        Abuse-</a> <a href="https://policies.google.com/terms?gl=US&hl=en">Terms of
-                        Service</a></small>
-            </p>
-            <a href="https://www.google.com/forms/about/">
-                <img src="google-form.PNG" </a> </center> </footer> </body> </html>
+        <p>
+            <small>This content is neither created nor endorsed by Google.<a
+                    href="https://docs.google.com/forms/d/e/1FAIpQLSdmJ4tz9zUZ2b5U5htvHH1kmhNlVO-oe6hS90T1G3zqgTDTqw/reportabuse?source=https://docs.google.com/forms/d/e/1FAIpQLSdmJ4tz9zUZ2b5U5htvHH1kmhNlVO-oe6hS90T1G3zqgTDTqw/viewform">Report
+                    Abuse-</a> <a href="https://policies.google.com/terms?gl=US&hl=en">Terms of
+                    Service</a></small>
+        </p>
+        <a href="https://www.google.com/forms/about/">
+            <img src="google-form.PNG"></a>
+    </footer>
+</body>
+</html>
